--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PT'
 - !lcsh 'Poetry'
+- GITenberg
 title: De Liereman
 url: http://www.gutenberg.org/ebooks/6922
